# treelog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  tree.dot  tree.html  tree.txt
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: arbitrary.rs  basic.rs  builder.rs  cargo.rs  clap.rs  comparison.rs  complex.rs  customization.rs  export.rs  file_tree.rs  filesystem.rs  git2.rs  indicatif.rs  iterator.rs  macro.rs  merge.rs  path.rs  petgraph.rs  ron.rs  search.rs  serde.rs  sorting.rs  statistics.rs  syn.rs  transform.rs  traversal.rs  tree_sitter.rs  xml.rs
scripts/: ci-check.sh  install-hooks.sh  pre-commit.sh  pre-push.sh  validate-version.sh
src/: builder.rs  cargo.rs  clap.rs  cli.rs  compare.rs  config.rs  export.rs  filesystem.rs  git2.rs  incremental.rs  indicatif.rs  iterator.rs  level.rs  lib.rs  macros.rs  merge.rs  path.rs  petgraph.rs  prefix.rs  renderer.rs  ron.rs  serde.rs  style.rs  syn.rs  transform.rs  traversal.rs  tree.rs  tree_sitter.rs  utils.rs  xml.rs
src/arbitrary/: cargo.rs  clap.rs  git2.rs  json.rs  mod.rs  petgraph.rs  syn.rs  toml.rs  tree_sitter.rs  walkdir.rs  xml.rs  yaml.rs
src/cli/: args.rs  handlers.rs  mod.rs  utils.rs
src/export/: dot.rs  html.rs  mod.rs  svg.rs
src/ops/: merge.rs  mod.rs  path.rs  search.rs  sort.rs  stats.rs  traversal.rs
src/render/: config.rs  mod.rs  prefix.rs  style.rs
src/serde/: json.rs  mod.rs  ron.rs  toml.rs  yaml.rs
