[package]
name = "treelog"
version = "0.0.4"
edition = "2024"
authors = ["Milan de Kruijf"]
description = "A highly customizable, optimized, and modular tree rendering library"
license = "MIT"
repository = "https://github.com/muijf/treelog"
homepage = "https://github.com/muijf/treelog"
documentation = "https://docs.rs/treelog"
keywords = ["tree", "visualization", "formatting", "display", "hierarchical"]
categories = ["development-tools", "text-processing"]
readme = "README.md"

[lib]
name = "treelog"
path = "src/lib.rs"

[dependencies]
colored = { version = "3.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
walkdir = { version = "2", optional = true }
petgraph = { version = "0.6", optional = true }
cargo_metadata = { version = "0.18", optional = true }
git2 = { version = "0.18", optional = true }
roxmltree = { version = "0.19", optional = true }
syn = { version = "2.0", optional = true, features = ["full", "parsing", "extra-traits"] }
ron = { version = "0.8", optional = true }
tree-sitter = { version = "0.21", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }

[features]
default = ["builder", "iterator"]
builder = []
iterator = []
macro = []
formatters = []
traversal = []
transform = []
path = []
comparison = []
merge = []
export = []
color = ["colored"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
yaml = ["serde", "dep:serde_yaml"]
toml = ["serde", "dep:toml"]
walkdir = ["dep:walkdir"]
petgraph = ["dep:petgraph"]
cargo-metadata = ["dep:cargo_metadata"]
git2 = ["dep:git2"]
roxmltree = ["dep:roxmltree"]
syn = ["dep:syn"]
ron = ["serde", "dep:ron"]
tree-sitter = ["dep:tree-sitter"]
clap = ["dep:clap"]
all = ["builder", "iterator", "macro", "formatters", "traversal", "transform", "path", "comparison", "merge", "export", "color", "serde", "json", "yaml", "toml", "walkdir", "petgraph", "cargo-metadata", "git2", "roxmltree", "syn", "ron", "tree-sitter", "clap"]

[dev-dependencies]
colored = "3.0"
tree-sitter-rust = "0.21"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "builder"
path = "examples/builder.rs"
required-features = ["builder"]

[[example]]
name = "iterator"
path = "examples/iterator.rs"
required-features = ["iterator"]

[[example]]
name = "customization"
path = "examples/customization.rs"

[[example]]
name = "complex"
path = "examples/complex.rs"

[[example]]
name = "file_tree"
path = "examples/file_tree.rs"
required-features = ["builder"]

[[example]]
name = "macro"
path = "examples/macro.rs"
required-features = ["macro"]

[[example]]
name = "statistics"
path = "examples/statistics.rs"

[[example]]
name = "traversal"
path = "examples/traversal.rs"
required-features = ["traversal"]

[[example]]
name = "search"
path = "examples/search.rs"

[[example]]
name = "transform"
path = "examples/transform.rs"
required-features = ["transform"]

[[example]]
name = "sorting"
path = "examples/sorting.rs"

[[example]]
name = "path"
path = "examples/path.rs"
required-features = ["path"]

[[example]]
name = "comparison"
path = "examples/comparison.rs"
required-features = ["comparison"]

[[example]]
name = "merge"
path = "examples/merge.rs"
required-features = ["merge"]

[[example]]
name = "export"
path = "examples/export.rs"
required-features = ["export"]

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["json", "yaml"]

[[example]]
name = "filesystem"
path = "examples/filesystem.rs"
required-features = ["walkdir"]

[[example]]
name = "petgraph"
path = "examples/petgraph.rs"
required-features = ["petgraph"]

[[example]]
name = "cargo"
path = "examples/cargo.rs"
required-features = ["cargo-metadata"]

[[example]]
name = "git2"
path = "examples/git2.rs"
required-features = ["git2"]

[[example]]
name = "xml"
path = "examples/xml.rs"
required-features = ["roxmltree"]

[[example]]
name = "syn"
path = "examples/syn.rs"
required-features = ["syn"]

[[example]]
name = "ron"
path = "examples/ron.rs"
required-features = ["ron", "serde"]

[[example]]
name = "tree_sitter"
path = "examples/tree_sitter.rs"
required-features = ["tree-sitter"]

[[example]]
name = "clap"
path = "examples/clap.rs"
required-features = ["clap"]
