[package]
name = "treelog"
version = "0.0.6"
edition = "2024"
authors = ["Milan de Kruijf"]
description = "A highly customizable, optimized, and modular tree rendering library"
license = "MIT"
repository = "https://github.com/muijf/treelog"
homepage = "https://github.com/muijf/treelog"
documentation = "https://docs.rs/treelog"
keywords = ["tree", "visualization", "formatting", "display", "hierarchical"]
categories = ["development-tools", "text-processing"]
readme = "README.md"

[lib]
name = "treelog"
path = "src/lib.rs"

[[bin]]
name = "treelog"
path = "src/cli/mod.rs"
required-features = ["cli"]

[dependencies]
colored = { version = "3.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.9", optional = true }
walkdir = { version = "2", optional = true }
petgraph = { version = "0.8", optional = true }
cargo_metadata = { version = "0.23", optional = true }
git2 = { version = "0.20", optional = true }
roxmltree = { version = "0.21", optional = true }
syn = { version = "2.0", optional = true, features = ["full", "parsing", "extra-traits"] }
ron = { version = "0.12", optional = true }
tree-sitter = { version = "0.26", optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }
indicatif = { version = "0.18.3", optional = true }

[features]
default = ["builder", "iterator"]
builder = []
iterator = []
macro = []
formatters = []
traversal = []
transform = []
path = []
compare = []
search = []
sort = []
stats = []
merge = []
export = []
color = ["colored"]
serde = ["serde-json", "serde-yaml", "serde-toml", "serde-ron"]
serde-json = ["dep:serde", "dep:serde_json"]
serde-yaml = ["dep:serde", "dep:serde_yaml"]
serde-toml = ["dep:serde", "dep:toml"]
serde-ron = ["dep:serde", "dep:ron"]
walkdir = ["arbitrary-walkdir"]
petgraph = ["arbitrary-petgraph"]
cargo-metadata = ["arbitrary-cargo"]
git2 = ["arbitrary-git2"]
syn = ["arbitrary-syn"]
tree-sitter = ["arbitrary-tree-sitter"]
clap = ["dep:clap"]
cli = ["clap"]
arbitrary = ["arbitrary-json", "arbitrary-yaml", "arbitrary-toml", "arbitrary-xml", "arbitrary-walkdir", "arbitrary-petgraph", "arbitrary-cargo", "arbitrary-git2", "arbitrary-syn", "arbitrary-tree-sitter", "arbitrary-clap"]
arbitrary-json = ["serde-json"]
arbitrary-yaml = ["serde-yaml"]
arbitrary-toml = ["serde-toml"]
arbitrary-xml = ["dep:roxmltree"]
arbitrary-walkdir = ["dep:walkdir"]
arbitrary-petgraph = ["dep:petgraph"]
arbitrary-cargo = ["dep:cargo_metadata"]
arbitrary-git2 = ["dep:git2"]
arbitrary-syn = ["dep:syn"]
arbitrary-tree-sitter = ["dep:tree-sitter"]
arbitrary-clap = ["dep:clap"]
incremental = []
all = ["builder", "iterator", "macro", "formatters", "traversal", "transform", "path", "compare", "search", "sort", "stats", "merge", "export", "color", "serde", "serde-json", "serde-yaml", "serde-toml", "serde-ron", "walkdir", "petgraph", "cargo-metadata", "git2", "syn", "tree-sitter", "clap", "arbitrary", "arbitrary-json", "arbitrary-yaml", "arbitrary-toml", "arbitrary-xml", "arbitrary-walkdir", "arbitrary-petgraph", "arbitrary-cargo", "arbitrary-git2", "arbitrary-syn", "arbitrary-tree-sitter", "arbitrary-clap", "incremental"]

[dev-dependencies]
colored = "3.0"
console = "0.16.1"
indicatif = "0.18.3"
once_cell = "1.21.3"
rand = "0.9.2"
term_size = "0.3.2"
tree-sitter-rust = "0.24"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "builder"
path = "examples/builder.rs"
required-features = ["builder"]

[[example]]
name = "iterator"
path = "examples/iterator.rs"
required-features = ["iterator"]

[[example]]
name = "customization"
path = "examples/customization.rs"

[[example]]
name = "complex"
path = "examples/complex.rs"

[[example]]
name = "file_tree"
path = "examples/file_tree.rs"
required-features = ["builder"]

[[example]]
name = "macro"
path = "examples/macro.rs"
required-features = ["macro"]

[[example]]
name = "statistics"
path = "examples/statistics.rs"

[[example]]
name = "traversal"
path = "examples/traversal.rs"
required-features = ["traversal"]

[[example]]
name = "search"
path = "examples/search.rs"

[[example]]
name = "transform"
path = "examples/transform.rs"
required-features = ["transform"]

[[example]]
name = "sorting"
path = "examples/sorting.rs"

[[example]]
name = "path"
path = "examples/path.rs"
required-features = ["path"]

[[example]]
name = "comparison"
path = "examples/comparison.rs"
required-features = ["compare"]

[[example]]
name = "merge"
path = "examples/merge.rs"
required-features = ["merge"]

[[example]]
name = "export"
path = "examples/export.rs"
required-features = ["export"]

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["serde-json", "serde-yaml"]

[[example]]
name = "filesystem"
path = "examples/filesystem.rs"
required-features = ["arbitrary-walkdir"]

[[example]]
name = "petgraph"
path = "examples/petgraph.rs"
required-features = ["arbitrary-petgraph"]

[[example]]
name = "cargo"
path = "examples/cargo.rs"
required-features = ["arbitrary-cargo"]

[[example]]
name = "git2"
path = "examples/git2.rs"
required-features = ["arbitrary-git2"]

[[example]]
name = "xml"
path = "examples/xml.rs"
required-features = ["arbitrary-xml"]

[[example]]
name = "syn"
path = "examples/syn.rs"
required-features = ["arbitrary-syn"]

[[example]]
name = "ron"
path = "examples/ron.rs"
required-features = ["serde-ron"]

[[example]]
name = "tree_sitter"
path = "examples/tree_sitter.rs"
required-features = ["arbitrary-tree-sitter"]

[[example]]
name = "clap"
path = "examples/clap.rs"
required-features = ["arbitrary-clap"]

[[example]]
name = "arbitrary"
path = "examples/arbitrary.rs"
required-features = ["arbitrary-json", "arbitrary-yaml", "arbitrary-toml"]
